# ManySnakes

./: .gitignore  CMakeLists.txt  CMdep  DEVLOG.md  Doxyfile  README.md  config.h.in  gitnotes  main.c  math.c  run.sh  snake.c  snake.h  todo
scripts/: config.lua  mainmenu.lua
src/: config.h.in  config.lua  main.c  math.h  resource.c  resource.h  snake.c  snake.h  text.c  text.h  textbox.c  textbox.h  texture.c  texture.h  ui.c  ui.h  version.h.in
